--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Android Studio - added by Shafiq : https://stackoverflow.com/questions/16736856/what-should-be-in-my-gitignore-for-an-android-studio-project
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
+
+
 # Built application files
 *.apk
 *.ap_
