--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.android.gms:play-services-maps:11.4.0'//15.0.1' is bad version & causes PlacePicker to close soon aft launch
+    implementation 'com.google.android.gms:play-services-maps:11.4.0'
+//15.0.1' is bad version & causes PlacePicker to close soon aft launch
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -40,8 +41,6 @@ dependencies {
     //PlacePicker : https://stackoverflow.com/questions/38063648/cannot-import-google-places-placepicker-into-android-project?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
     implementation 'com.google.android.gms:play-services-location:11.4.0'//9.2.0'
     implementation 'com.google.android.gms:play-services-places:11.4.0'//9.2.0'
-
-
 
     //https://stackoverflow.com/questions/40268805/how-to-update-google-play-service-on-emulator-android-studio/40375645#40375645
     //compile 'com.google.android.gms:play-services-maps:9.6.0'
