--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.4.0'//9.2.0'
     implementation 'com.google.android.gms:play-services-places:11.4.0'//9.2.0'
 
+    //JSON conversions
+    compile 'com.google.code.gson:gson:2.8.0'
+
     //https://stackoverflow.com/questions/40268805/how-to-update-google-play-service-on-emulator-android-studio/40375645#40375645
     //compile 'com.google.android.gms:play-services-maps:9.6.0'
     //Do as 1st answer here:https://stackoverflow.com/questions/35476182/updating-google-play-services-in-emulator
