--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    dataBinding.enabled = true //https://guides.codepath.com/android/Applying-Data-Binding-for-Views
+
     //version discrepancy bw app & test-app:
     //https://stackoverflow.com/questions/36561037/conflict-with-dependency-com-android-supportsupport-annotations-resolved-ver?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
     configurations.all {
