--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,27 +32,26 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Dashboard" >
+        <activity android:name=".Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-
         <activity android:name=".Login" />
         <activity android:name=".FindClinic" />
         <activity android:name=".BookingDetails" />
 
-        <!--<activity android:name=".Dashboard" />-->
+        <!-- <activity android:name=".Dashboard" /> -->
         <activity android:name=".NewUserRegister" />
         <activity android:name=".Bookings_All" />
         <activity android:name=".Settings" />
-        <activity android:name=".VerifyEmail"></activity>
+        <activity android:name=".VerifyEmail" />
+        <activity android:name=".DrProfile"></activity>
     </application>
 
 </manifest>
