--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-
+        vectorDrawables.useSupportLibrary = true
         applicationId "comp231.drbooking"
         minSdkVersion 17
         targetSdkVersion 26
