David's code added+modified => ADMIN can edit user profiles now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,10 @@
         <activity android:name=".VerifyEmail" />
         <activity android:name=".DrProfile" />
         <activity android:name=".Dashboard" />
+
         <service android:name=".ServiceIntro" />
 
+        <activity android:name=".AdminDashboard"></activity>
     </application>
 
 </manifest>
